# ComfyUI-Mie-Package-Launcher

./: .gitignore  BUILD.md  CLI_README.md  ComfyUI启动器.spec  ComfyUI启动器_20260227_203700.spec  README.md  __main__.py  assets.py  build.py  build_exe.py  build_exe_v2.py  build_parameters.json  comfyui_launcher_enhanced.py  comfyui_launcher_pyqt.py  config.json  config_manager.py  headless_app.py  launcher_cache.json  logger_setup.py  net_utils.py  paths.py  pip_utils.py  process_manager.py  pyproject.toml  release.py  requirements.txt  ui_mockup.html  upgrade_exe.py  utils.py  version_manager.py  使用说明.md  测试启动器.spec
EnigmaVirtualBox/: launcher.evb
config/: manager.py
core/: app_state.py  cli_start.py  kill.py  launcher_cmd.py  probe.py  process_events.py  process_manager.py  runner_start.py  runner_stop.py  version_manager.py  version_service.py  version_workers.py
docs/: auto-update.md  launch_page_decomposition.md  process_events_design.md
launcher/: config.json
services/: announcement_service.py  config_service.py  di.py  git_service.py  interfaces.py  launcher_update_service.py  log_package_service.py  model_path_service.py  runtime_service.py  startup_service.py  update_service.py  version_service.py
tests/: .deleted-tests-list.txt  PYTEST_QT_NOTES.md  conftest.py  spike_pytest_qt.py
ui/: about_tab.py  assets_helper.py  comfyui_tab.py  custom_widges.py  events.py  external_models_tab.py  helpers.py  launch_controls_panel.py  launcher_about_tab.py  layout.py  network_panel.py  version_panel.py  window.py
ui_qt/: REFACTOR_PLAN.md  REFACTOR_STATUS.md  (+4 more)
(+76 files in other folders)
